--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ html{
 #home::before{
     content: "";
     position: absolute;
-    background: url('../HTML-site/img6.jpg') no-repeat center center/cover;
+    background: url('img6.jpg') no-repeat center center/cover;
     height: 642px;
     top:0px;
     left:0px;
